--- a/app/src/main/res/layout/activity_fiestas.xml
+++ b/app/src/main/res/layout/activity_fiestas.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="111dp"
         android:fontFamily="sans-serif-black"
+        android:text="Katari"
         android:textColor="#F44336"
         android:textSize="48sp"
         app:layout_constraintBottom_toTopOf="@+id/txtDescr"
@@ -27,6 +28,7 @@
         android:layout_height="153dp"
         android:layout_marginBottom="10dp"
         android:fontFamily="sans-serif-medium"
+        android:text="Bar tipo pub, con un ambiente acogedor y moderno,elbar Katari se destaca por su enfoque en la música en vivo y la diversidad cultural"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtUbicacion"
@@ -42,6 +44,7 @@
         android:layout_height="42dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
+        android:text="https://goo.gl/maps/pMjo474gKfAfWFRh6"
         android:textColor="#2196F3"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/txtPalabrasClave"
@@ -56,6 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="20dp"
+        android:text="Katari - Pub"
         android:textColor="#FFEB3B"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtHorarios"
@@ -69,6 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:text="5:00pm - 0:00am"
         android:textColor="#FF9800"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,6 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="30dp"
+        android:text="Medio - Alto"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/btnRefrescar"
