--- a/app/src/main/res/layout/activity_historia.xml
+++ b/app/src/main/res/layout/activity_historia.xml
@@ -11,8 +11,11 @@
         android:id="@+id/txtTituloHistoria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="111dp"
+        android:layout_marginEnd="20dp"
         android:fontFamily="@font/adamina"
+        android:text="Museo de la Ciudad"
         android:textColor="#000000"
         android:textSize="48sp"
         app:layout_constraintBottom_toTopOf="@+id/txtDescr"
@@ -27,6 +30,7 @@
         android:layout_height="153dp"
         android:layout_marginBottom="10dp"
         android:fontFamily="@font/adamina"
+        android:text="Museo en donde se rescata toda la historia de la ciudad de Quito"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtUbicacion"
@@ -43,6 +47,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
         android:fontFamily="@font/adamina"
+        android:text="https://goo.gl/maps/xiFxzzmjwPR2j66x6"
         android:textColor="#0C25B3"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/txtPalabrasClave"
@@ -58,6 +63,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="20dp"
         android:fontFamily="@font/adamina"
+        android:text="Museo - Ciudad"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtHorarios"
@@ -73,6 +79,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="2dp"
         android:fontFamily="@font/adamina"
+        android:text="10:00am - 5:30pm"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtPrecios"
@@ -88,6 +95,7 @@
         android:layout_marginTop="25dp"
         android:layout_marginBottom="40dp"
         android:fontFamily="@font/adamina"
+        android:text="Gratuito"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/btnRefresh"
