--- a/app/src/main/res/layout/activity_naturaleza.xml
+++ b/app/src/main/res/layout/activity_naturaleza.xml
@@ -11,8 +11,11 @@
         android:id="@+id/txtTituloNaturaleza"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="111dp"
+        android:layout_marginEnd="20dp"
         android:fontFamily="sans-serif-black"
+        android:text="Parque de Guapulo"
         android:textColor="#000000"
         android:textSize="48sp"
         app:layout_constraintBottom_toTopOf="@+id/txtDescr"
@@ -27,6 +30,7 @@
         android:layout_height="153dp"
         android:layout_marginBottom="10dp"
         android:fontFamily="@font/akaya_telivigala"
+        android:text="Uno de los parques mas lindos de la ciudad, el cual ofrece grandes vistas panoramicas"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtUbicacion"
@@ -43,6 +47,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
         android:fontFamily="@font/akaya_telivigala"
+        android:text="https://goo.gl/maps/T6JdABaKNaWonxuv8"
         android:textColor="#000000"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/txtPalabrasClave"
@@ -58,6 +63,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="20dp"
         android:fontFamily="@font/akaya_telivigala"
+        android:text="Parque - Guapulo"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtHorarios"
@@ -72,6 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/akaya_telivigala"
+        android:text="6:00am - 6:00pm"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,6 +93,7 @@
         android:layout_marginTop="25dp"
         android:layout_marginBottom="21dp"
         android:fontFamily="@font/akaya_telivigala"
+        android:text="Gratuito"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/btnRefrescar"
